gitops/apps/auxiliary/zod-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: zot-nodeport
  namespace: zot
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500
  selector:
    app.kubernetes.io/name: zot
