gitops/apps/auxiliary/zod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zot-ingress
  namespace: zot
  labels:
    app: zot
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: registry.k8s.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: registry-app-zot
              port:
                number: 5000
